--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,11 +17,11 @@
             </intent-filter>
         </activity>
         <activity android:name=".SecondActivity"
-            android:label="@string/activity2_name"
+            android:label="SecondActivity"
             android:parentActivityName=".MainActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".SecondActivity"/>
+                android:value="alexgochi.twoactivities.MainActivity"/>
         </activity>
     </application>
 </manifest>
